// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectWithState /> with classes props matches with snapshot 1`] = `
<div>
  <div
    className="sc-bdVaJa bpOtsE k-Select--is-disabled css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className="k-Select__control k-Select__control--is-disabled css-1fhf3k1-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="k-Select__value-container css-g1d714-ValueContainer"
      >
        <div
          className="k-Select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby=""
          className="css-62g3xt-dummyInput"
          disabled={true}
          id="react-select-5-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="k-Select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="k-Select__indicator-separator css-109onse-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="k-Select__indicator k-Select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectWithState /> with default props matches with snapshot 1`] = `
<div>
  <div
    className="sc-bdVaJa eYWVjY css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="k-Select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="k-Select__value-container css-g1d714-ValueContainer"
      >
        <div
          className="k-Select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby=""
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="k-Select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="k-Select__indicator-separator css-1okebmr-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="k-Select__indicator k-Select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectWithState /> with default value matches with snapshot 1`] = `
<div>
  <div
    className="sc-bdVaJa eYWVjY css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="k-Select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="k-Select__value-container css-g1d714-ValueContainer"
      >
        <div
          className="k-Select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby=""
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="k-Select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="k-Select__indicator-separator css-1okebmr-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="k-Select__indicator k-Select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectWithState /> with label matches with snapshot 1`] = `
<div>
  <div
    className="sc-bdVaJa eYWVjY css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="k-Select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="k-Select__value-container css-g1d714-ValueContainer"
      >
        <div
          className="k-Select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby=""
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="k-Select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="k-Select__indicator-separator css-1okebmr-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="k-Select__indicator k-Select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
